ngbook: add user item component in userlist component

--- a/ngbook-hellworld/src/app/user-list/user-list.component.html
+++ b/ngbook-hellworld/src/app/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <p>user-list works!</p>
 <ul>
     <li *ngFor="let name of names" >
-        {{name}}
+        <app-user-item [name]="name"></app-user-item>
     </li>
 
 </ul>
