--- a/reddit/src/app/navbar/navbar.component.html
+++ b/reddit/src/app/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img src="../../assets/images/download.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      reddit
+    </a>
+  </nav>
