--- a/reddit/src/app/app.component.html
+++ b/reddit/src/app/app.component.html
@@ -1,3 +1,15 @@
 <app-navbar></app-navbar>
 
-
+<div class="container">
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Link</label>
+    <input #newLink type="text" class="form-control" id="link"  name="link" aria-describedby="emailHelp" placeholder="Link">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Title</label>
+    <input #newTitle type="text" class="form-control" id="title"  name="title" placeholder="Title" >
+  </div>
+  <button (click)="addArticle(newLink, newTitle)" type="submit" class="btn btn-primary m-2">Submit</button>
+</form>
+</div>
