ngbook.reddit: add article template

--- a/reddit/src/app/article/article.component.html
+++ b/reddit/src/app/article/article.component.html
@@ -1,1 +1,12 @@
-<p>article works!</p>
+<div class="container">
+<div class="user-comment-card">
+    <div class="user-info">
+      <h4 class="user__name">loading...</h4>
+      <div class="user__comment"></div>
+      <div class="user__comment__reaction">
+        <i class="icon ion-md-thumbs-up"><img class="icon" src="../../assets/images/like.png    "></i> <small>34</small>
+        <i class="icon ion-md-thumbs-down"><img class="icon" src="../../assets/images/dislike.png"></i> <small>04</small>
+      </div>
+  </div>
+  </div>
+</div>
