ngbook.reddit: add article model

--- a/reddit/src/app/app.component.html
+++ b/reddit/src/app/app.component.html
@@ -12,6 +12,11 @@
   </div>
   <button (click)="addArticle(newLink, newTitle)" type="submit" class="btn btn-success m-2">Submit</button>
 </form>
-</div>
 
 <app-article></app-article>
+
+<app-article></app-article>
+
+<app-article></app-article>
+
+</div>
