ngbook.inventory: add productRow component

--- a/inventory/src/app/product-list/product-list.component.html
+++ b/inventory/src/app/product-list/product-list.component.html
@@ -1,1 +1,6 @@
-<p>product-list works!</p>
+<app-product-row
+  *ngFor="let product of productList"
+  [product]="product"
+  (click)="clicked(product)"
+  [class.selected]="isSelected(product)"
+></app-product-row>
