ngbook.inventory: add 3 component and handle output and input dataflow

--- a/inventory/src/app/app.component.html
+++ b/inventory/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-product-list></app-product-list>
+<app-product-list
+  [productList]="products"
+  (onProductSelected)="productWasSelected($event)"
+></app-product-list>
