ngbook: implement simple template driven form

--- a/template-driven-form/src/app/hero-form/hero-form.component.html
+++ b/template-driven-form/src/app/hero-form/hero-form.component.html
@@ -1,1 +1,12 @@
-<p>hero-form works!</p>
+<form #heroForm="ngForm" (ngSubmit)="onSubmit(heroForm.value)">
+  <label for="name">Name</label>
+  <input
+    type="text"
+    class="form-control"
+    id="name"
+    required
+    ngModel
+    name="name"
+  />
+  <button type="submit">submit</button>
+</form>
