mosh.helloworld: use ng-content

--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -4,3 +4,8 @@ here
   (change)="onFavoriteChanged($event)"
 >
 </app-favorite>
+
+<app-panel>
+  <div class="mamad">hello</div>
+  <div class="akbar">ok bye</div>
+</app-panel>
