--- a/hello-world/src/app/panel/panel.component.html
+++ b/hello-world/src/app/panel/panel.component.html
@@ -1,1 +1,8 @@
-<p>panel works!</p>
+<div class="panel panel-default">
+  <div class="card-header">
+    <ng-content select=".mamad"></ng-content>
+  </div>
+  <div class="card-header">
+    <ng-content select=".akbar"></ng-content>
+  </div>
+</div>
