--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -6,6 +6,6 @@ here
 </app-favorite>
 
 <app-panel>
-  <div class="mamad">hello</div>
-  <div class="akbar">ok bye</div>
+  <ng-container class="mamad">hello</ng-container>
+  <ng-container class="akbar">ok bye</ng-container>
 </app-panel>
