mosh.directives: complete  using ng-template for if and else statement

--- a/mosh-directives/src/app/app.component.html
+++ b/mosh-directives/src/app/app.component.html
@@ -1,2 +1,4 @@
-<div *ngIf="courses.length > 0; else noCourses">ok</div>
+<div *ngIf="courses.length > 0; then coursesList; else noCourses"></div>
+<ng-template #coursesList>ok</ng-template>
+
 <ng-template #noCourses>so ok</ng-template>
