--- a/hello-world/src/app/contact-form/contact-form.component.html
+++ b/hello-world/src/app/contact-form/contact-form.component.html
@@ -1,11 +1,32 @@
 <form>
   <div class="form-group">
     <label for="firstName">First Name</label>
-    <input id="firstName" type="text" class="form-control" />
+    <input
+      ngModel
+      name="firstName"
+      #firstName="ngModel"
+      (change)="log(firstName)"
+      id="firstName"
+      type="text"
+      class="form-control"
+    />
+    <div
+      class="alert alert-danger"
+      *ngIf="firstName.touched && !firstName.value"
+    >
+      First Name is required!
+    </div>
   </div>
   <div class="form-group">
     <label for="comment">Comment</label
-    ><textarea class="form-control" id="comment" cols="30" rows="10"></textarea>
+    ><textarea
+      ngModel
+      name="comment"
+      class="form-control"
+      id="comment"
+      cols="30"
+      rows="10"
+    ></textarea>
   </div>
   <button class="btn btn-primary">Submit</button>
 </form>
