--- a/hello-world/src/app/contact-form/contact-form.component.html
+++ b/hello-world/src/app/contact-form/contact-form.component.html
@@ -3,6 +3,10 @@
     <label for="firstName">First Name</label>
     <input
       ngModel
+      maxlength="10"
+      minlength="3"
+      required
+      pattern="saghal"
       name="firstName"
       #firstName="ngModel"
       (change)="log(firstName)"
@@ -12,9 +16,16 @@
     />
     <div
       class="alert alert-danger"
-      *ngIf="firstName.touched && !firstName.value"
+      *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"
     >
-      First Name is required!
+      <div *ngIf="firstName.errors?.required">First name is required!</div>
+      <div *ngIf="firstName.errors?.minlength">
+        First name min length must be
+        {{ firstName.errors?.minlength.requiredLength }}
+      </div>
+      <div *ngIf="firstName.errors?.pattern">
+        firstName pattern does not match!
+      </div>
     </div>
   </div>
   <div class="form-group">
