--- a/hello-world/src/app/contact-form/contact-form.component.html
+++ b/hello-world/src/app/contact-form/contact-form.component.html
@@ -44,5 +44,5 @@
       rows="10"
     ></textarea>
   </div>
-  <button class="btn btn-primary">Submit</button>
+  <button class="btn btn-primary" [disabled]="!f.valid">Submit</button>
 </form>
