--- a/hello-world/src/app/signup-form/signup-form.component.html
+++ b/hello-world/src/app/signup-form/signup-form.component.html
@@ -1,11 +1,21 @@
-<form>
+<form [formGroup]="form">
   <div class="form-group">
     <label for="username">Username</label>
-    <input id="username" type="text" class="form-control" />
+    <input
+      formControlName="username"
+      id="username"
+      type="text"
+      class="form-control"
+    />
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input id="password" type="text" class="form-control" />
+    <input
+      formControlName="password"
+      id="password"
+      type="text"
+      class="form-control"
+    />
   </div>
   <button class="btn btn-primary m-2" type="submit">Sign Up</button>
 </form>
