--- a/hello-world/src/app/signup-form/signup-form.component.html
+++ b/hello-world/src/app/signup-form/signup-form.component.html
@@ -7,6 +7,16 @@
       type="text"
       class="form-control"
     />
+    <div
+      *ngIf="username.invalid && (username.dirty || username.touched)"
+      class="alert alert-danger"
+    >
+      <div *ngIf="username.errors?.required">username field required!</div>
+      <div *ngIf="username.errors?.minlength">
+        username field must be min
+        {{ username.errors?.minlength.requiredLength }}
+      </div>
+    </div>
   </div>
   <div class="form-group">
     <label for="password">Password</label>
