--- a/hello-world/src/app/signup-form/signup-form.component.html
+++ b/hello-world/src/app/signup-form/signup-form.component.html
@@ -16,6 +16,9 @@
         username field must be min
         {{ username.errors?.minlength.requiredLength }}
       </div>
+      <div *ngIf="username.errors?.cannotContainSpace">
+        cannot contain space!
+      </div>
     </div>
   </div>
   <div class="form-group">
