--- a/hello-world/src/app/change-password-form/change-password-form.component.html
+++ b/hello-world/src/app/change-password-form/change-password-form.component.html
@@ -1,1 +1,58 @@
-<p>change-password-form works!</p>
+<form [formGroup]="form">
+  <div class="form-group">
+    <label for="oldPassword">Old Password</label>
+    <input
+      id="oldPassword"
+      type="password"
+      class="form-control"
+      formControlName="oldPassword"
+    />
+    <div
+      *ngIf="oldPassword.invalid && (oldPassword.dirty || oldPassword.touched)"
+      class="alert alert-danger"
+    >
+      <div *ngIf="oldPassword.errors?.required">old Password required</div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="newPassword">New Password</label>
+    <input
+      id="newPassword"
+      type="password"
+      class="form-control"
+      formControlName="newPassword"
+    />
+    <div
+      *ngIf="newPassword.invalid && (newPassword.dirty || newPassword.touched)"
+      class="alert alert-danger"
+    >
+      <div *ngIf="newPassword.errors?.required">New Password required</div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="confirmNewPassword">Confirm New Password</label>
+    <input
+      id="confirmNewPassword"
+      formControlName="confirmNewPassword"
+      type="password"
+      class="form-control"
+    />
+    <div
+      *ngIf="
+        confirmNewPassword.invalid &&
+        (confirmNewPassword.dirty || confirmNewPassword.touched)
+      "
+      class="alert alert-danger"
+    >
+      <div *ngIf="confirmNewPassword.errors?.required">
+        Confirm New Password required
+      </div>
+    </div>
+  </div>
+
+  <button [disabled]="form.invalid" class="btn btn-primary m-2" type="submit">
+    Sign Up
+  </button>
+</form>
