--- a/hello-world/src/app/posts/posts.component.html
+++ b/hello-world/src/app/posts/posts.component.html
@@ -1,1 +1,5 @@
-<p>posts works!</p>
+<ul class="list-group">
+  <li class="list-group-item" (click)="onClick(posts)">
+    {{ posts.title }}
+  </li>
+</ul>
