--- a/Complete course/routing-start/src/app/servers/servers.component.html
+++ b/Complete course/routing-start/src/app/servers/servers.component.html
@@ -1,5 +1,7 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
+    <button class="btn btn-primary" (click)="onReload()">Reload</button>
+
     <div class="list-group">
       <a href="#" class="list-group-item" *ngFor="let server of servers">
         {{ server.name }}
