--- a/Complete course/routing-start/src/app/home/home.component.html
+++ b/Complete course/routing-start/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <h4>Welcome to Server Manager 4.0</h4>
 <p>Manage your Servers and Users.</p>
 
-<button (click)="goToServers()" class="btn btn-primary">Go To Servers</button>
+<button (click)="goToServer(1)" class="btn btn-primary">Go To Server</button>
