--- a/Complete course/routing-start/src/app/servers/servers.component.html
+++ b/Complete course/routing-start/src/app/servers/servers.component.html
@@ -3,7 +3,13 @@
     <button class="btn btn-primary" (click)="onReload()">Reload</button>
 
     <div class="list-group">
-      <a href="#" class="list-group-item" *ngFor="let server of servers">
+      <a
+        [routerLink]="['/servers', 5, 'edit']"
+        [queryParams]="{ allowEdit: '1' }"
+        fragment="loading"
+        class="list-group-item"
+        *ngFor="let server of servers"
+      >
         {{ server.name }}
       </a>
     </div>
