--- a/Complete course/routing-start/src/app/servers/servers.component.html
+++ b/Complete course/routing-start/src/app/servers/servers.component.html
@@ -4,7 +4,7 @@
 
     <div class="list-group">
       <a
-        [routerLink]="['/servers', 5, 'edit']"
+        [routerLink]="['/servers', server.id]"
         [queryParams]="{ allowEdit: '1' }"
         fragment="loading"
         class="list-group-item"
@@ -17,6 +17,6 @@
   <div class="col-xs-12 col-sm-4">
     <app-edit-server></app-edit-server>
     <hr />
-    <app-server></app-server>
+    <!--    <app-server></app-server>-->
   </div>
 </div>
