--- a/Complete course/routing-start/src/app/home/home.component.html
+++ b/Complete course/routing-start/src/app/home/home.component.html
@@ -2,3 +2,5 @@
 <p>Manage your Servers and Users.</p>
 
 <button (click)="goToServer(1)" class="btn btn-primary">Go To Server</button>
+<button class="btn btn-default" (click)="onLogin()">Login</button>
+<button class="btn btn-default" (click)="(onLogout)">Logout</button>
