--- a/real-state/src/app/login/login.component.html
+++ b/real-state/src/app/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<div class="body"></div>
+<div class="grad"></div>
+<div class="header">
+  <div>Real<span>State</span></div>
+</div>
+<br />
+<form class="login">
+  <input type="text" placeholder="username" name="user" /><br />
+  <input type="password" placeholder="password" name="password" /><br />
+  <input type="button" value="Login" />
+</form>
