--- a/real-state/src/app/login/login.component.css
+++ b/real-state/src/app/login/login.component.css
@@ -50,7 +50,22 @@ body {
   left: calc(50% - 255px);
   z-index: 2;
 }
-
+.btn {
+  width: 260px;
+  height: 35px;
+  background: #fff;
+  border: 1px solid #fff;
+  cursor: pointer;
+  border-radius: 2px;
+  color: #a18d6c;
+  font-family: "Exo", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 6px;
+  margin-top: 10px;
+  outline: none;
+  opacity: 0.8;
+}
 .header div {
   float: left;
   color: #fff;
