--- a/real-state/src/app/login/login.component.html
+++ b/real-state/src/app/login/login.component.html
@@ -4,8 +4,8 @@
   <div>Real<span>State</span></div>
 </div>
 <br />
-<form class="login">
-  <input type="text" placeholder="username" name="user" /><br />
-  <input type="password" placeholder="password" name="password" /><br />
-  <input type="button" value="Login" />
+<form class="login" #f="ngForm" (ngSubmit)="onSubmit(f.value)">
+  <input type="text" placeholder="username" name="user" ngModel /><br />
+  <input type="password" placeholder="password" name="password" ngModel /><br />
+  <button type="submit" class="btn">login</button>
 </form>
