realState: Login form and checking complete

--- a/real-state/src/app/login/login.component.html
+++ b/real-state/src/app/login/login.component.html
@@ -5,7 +5,7 @@
 </div>
 <br />
 <form class="login" #f="ngForm" (ngSubmit)="onSubmit(f.value)">
-  <input type="text" placeholder="username" name="user" ngModel /><br />
+  <input type="text" placeholder="username" name="username" ngModel /><br />
   <input type="password" placeholder="password" name="password" ngModel /><br />
   <button type="submit" class="btn">login</button>
 </form>
