mosh: get data with http

--- a/hello-world/src/app/posts/posts.component.html
+++ b/hello-world/src/app/posts/posts.component.html
@@ -1,5 +1,9 @@
 <ul class="list-group">
-  <li class="list-group-item" (click)="onClick(posts)">
-    {{ posts.title }}
+  <li
+    *ngFor="let post of posts"
+    class="list-group-item"
+    (click)="onClick(posts)"
+  >
+    {{ post.title }}
   </li>
 </ul>
