mosh: put with http

--- a/hello-world/src/app/posts/posts.component.html
+++ b/hello-world/src/app/posts/posts.component.html
@@ -5,11 +5,10 @@
   #title
 />
 <ul class="list-group">
-  <li
-    *ngFor="let post of posts"
-    class="list-group-item"
-    (click)="onClick(post)"
-  >
+  <li *ngFor="let post of posts" class="list-group-item">
+    <button (click)="updatePost(post)" class="btn btn-default btn-sm">
+      Update
+    </button>
     {{ post.title }}
   </li>
 </ul>
