--- a/hello-world/src/app/posts/posts.component.html
+++ b/hello-world/src/app/posts/posts.component.html
@@ -6,8 +6,11 @@
 />
 <ul class="list-group">
   <li *ngFor="let post of posts" class="list-group-item">
-    <button (click)="updatePost(post)" class="btn btn-default btn-sm">
+    <button (click)="updatePost(post)" class="btn btn-warning btn-sm">
       Update
+    </button>
+    <button class="btn btn-danger btn-sm m-2" (click)="deletePost(post)">
+      Delete
     </button>
     {{ post.title }}
   </li>
