--- a/real-state/src/app/houses/house/house.component.html
+++ b/real-state/src/app/houses/house/house.component.html
@@ -1,6 +1,6 @@
 <div class="watch">
   <img
-    src="https://raw.githubusercontent.com/XinyueZhou/watchapp/master/resource/WatchBlack.png"
+    src="https://rdcnewscdn.realtor.com/wp-content/uploads/2017/10/breaking-bad-whites-home.jpg"
   />
 </div>
 <div *ngIf="house !== undefined" class="description">
@@ -12,6 +12,7 @@
     <li>{{ house.type }}</li>
     <li>{{ house.address }}</li>
     <li>{{ house.updated }}</li>
+    <li>{{ house.status }}</li>
   </ul>
 </div>
 <div class="reset-btn">update</div>
