--- a/real-state/src/app/houses/houses.component.css
+++ b/real-state/src/app/houses/houses.component.css
@@ -1,7 +1,7 @@
 body {
   padding: 0 2%;
   color: #2e3e50;
-  background: #d8dddd;
+  background: #090f0f;
 }
 .X {
   margin: auto;
@@ -48,6 +48,7 @@ li {
   min-height: 200px;
   max-height: 220px;
   box-sizing: border-box;
+  cursor: pointer;
 }
 /*Styles */
 .df {
@@ -135,4 +136,20 @@ li {
   .SG .sgLi {
     width: 100%;
   }
+}
+.reset-btn {
+  position: absolute;
+  top: 0%;
+  right: 5px;
+  margin-top: 10px;
+  margin-right: 50px;
+  width: 120px;
+  height: 40px;
+  color: #4a4a4a;
+  border-radius: 4px;
+  background-color: #00ee73;
+  text-align: center;
+  font-size: 24px;
+  cursor: pointer;
+  padding-top: 5px;
 }
