realstate: route from houses to new house page

--- a/real-state/src/app/houses/houses.component.html
+++ b/real-state/src/app/houses/houses.component.html
@@ -1,6 +1,6 @@
 <div class="X">
   <h1>Houses</h1>
-  <button class="reset-btn">New</button>
+  <button class="reset-btn" [routerLink]="['/houses', 'new']">New</button>
 
   <ul class="SG">
     <li
