--- a/real-state/src/app/houses/new-house/new-house.component.html
+++ b/real-state/src/app/houses/new-house/new-house.component.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <form>
+    <form #f="ngForm" (ngSubmit)="createHouse(f.value)">
       <h1>Add new house utilization</h1>
 
       <div class="contentform">
@@ -9,10 +9,11 @@
             <p>Registration Number <span>*</span></p>
             <span class="icon-case"><i class="fa fa-male"></i></span>
             <input
-              type="text"
-              name="registrationNumber"
-              id="registrationNumber"
+              type="number"
+              name="id"
+              id="id"
               data-rule="required"
+              ngModel
             />
             <div class="validation"></div>
           </div>
@@ -20,7 +21,7 @@
           <div class="form-group">
             <p>style <span>*</span></p>
             <span class="icon-case"><i class="fa fa-user"></i></span>
-            <select class="combo" name="style" id="style">
+            <select class="combo" name="style" id="style" ngModel>
               <option value="apartment">Apartment</option>
               <option value="house">House</option>
             </select>
@@ -30,7 +31,7 @@
           <div class="form-group">
             <p>type <span>*</span></p>
             <span class="icon-case"><i class="fa fa-phone"></i></span>
-            <select class="combo" name="type" id="type">
+            <select class="combo" name="type" id="type" ngModel>
               <option value="residential">Residential</option>
               <option value="commercial">Commercial</option>
               <option value="office">Office</option>
@@ -41,7 +42,7 @@
           <div class="form-group">
             <p>status <span>*</span></p>
             <span class="icon-case"><i class="fa fa-phone"></i></span>
-            <select class="combo" name="status" id="status">
+            <select class="combo" name="status" id="status" ngModel>
               <option value="sale">Sale</option>
               <option value="rent">Rent</option>
             </select>
@@ -53,20 +54,20 @@
           <div class="form-group">
             <p>Year Built <span>*</span></p>
             <span class="icon-case"><i class="fa fa-building-o"></i></span>
-            <input type="number" name="yearBuilt" id="yearBuilt" />
+            <input type="number" name="yearBuilt" id="yearBuilt" ngModel />
             <div class="validation"></div>
           </div>
           <div class="form-group">
             <p>size <span>*</span></p>
             <span class="icon-case"><i class="fa fa-envelope-o"></i></span>
-            <input type="number" name="size" id="size" />
+            <input type="number" name="size" id="size" ngModel />
             <div class="validation"></div>
           </div>
 
           <div class="form-group">
             <p>address <span>*</span></p>
             <span class="icon-case"><i class="fa fa-comments-o"></i></span>
-            <textarea name="address" rows="14"></textarea>
+            <textarea name="address" rows="14" ngModel></textarea>
             <div class="validation"></div>
           </div>
         </div>
