--- a/real-state/src/app/houses/house/house.component.css
+++ b/real-state/src/app/houses/house/house.component.css
@@ -32,7 +32,7 @@ body {
   -moz-font-smoothing: antialiased;
   -moz-text-size-adjust: 100%;
   margin: 0;
-  background-color: #f2f2f2;
+  background-color: #6b6b6b;
   font-family: "Helvetica", sans-serif;
 }
 
@@ -311,6 +311,16 @@ body {
 .icon.home {
   background-size: cover;
   background-image: url(https://raw.githubusercontent.com/XinyueZhou/watchapp/master/resource/home.png);
+}
+#rcorners2 {
+  border-radius: 25px;
+  border: 2px solid #73ad21;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  margin-left: 20px;
+  padding: 20px;
+  width: 1100px;
+  height: 450px;
 }
 img {
   position: absolute;
