--- a/real-state/src/app/houses/edit-house/edit-house.component.html
+++ b/real-state/src/app/houses/edit-house/edit-house.component.html
@@ -1,1 +1,110 @@
-<p>edit-house works!</p>
+<html>
+  <body>
+    <div *ngIf="house !== undefined">
+      <form #f="ngForm" (ngSubmit)="updateHouse(f.value)">
+        <h1>Edit house information</h1>
+
+        <div class="contentform">
+          <div class="leftcontact">
+            <div class="form-group">
+              <p>Registration Number <span>*</span></p>
+              <span class="icon-case"><i class="fa fa-male"></i></span>
+              <input type="number" name="id" id="id" [(ngModel)]="house.id" />
+              <div class="validation"></div>
+            </div>
+
+            <div class="form-group">
+              <p>style <span>*</span></p>
+              <span class="icon-case"><i class="fa fa-user"></i></span>
+              <select
+                class="combo"
+                name="style"
+                id="style"
+                [(ngModel)]="house.style"
+              >
+                <option
+                  value="apartment"
+                  [selected]="house.style === 'apartment'"
+                >
+                  Apartment
+                </option>
+                <option value="house" [selected]="house.style === 'house'">
+                  House
+                </option>
+              </select>
+              <div class="validation"></div>
+            </div>
+
+            <div class="form-group">
+              <p>type <span>*</span></p>
+              <span class="icon-case"><i class="fa fa-phone"></i></span>
+              <select
+                class="combo"
+                name="type"
+                id="type"
+                [(ngModel)]="house.type"
+              >
+                <option value="residential">Residential</option>
+                <option value="commercial">Commercial</option>
+                <option value="office">Office</option>
+              </select>
+              <div class="validation"></div>
+            </div>
+
+            <div class="form-group">
+              <p>status <span>*</span></p>
+              <span class="icon-case"><i class="fa fa-phone"></i></span>
+              <select
+                class="combo"
+                name="status"
+                id="status"
+                [(ngModel)]="house.status"
+              >
+                <option value="sale">Sale</option>
+                <option value="rent">Rent</option>
+              </select>
+              <div class="validation"></div>
+            </div>
+          </div>
+
+          <div class="rightcontact">
+            <div class="form-group">
+              <p>Year Built <span>*</span></p>
+              <span class="icon-case"><i class="fa fa-building-o"></i></span>
+              <input
+                type="number"
+                name="yearBuilt"
+                id="yearBuilt"
+                [(ngModel)]="house.yearBuilt"
+              />
+              <div class="validation"></div>
+            </div>
+            <div class="form-group">
+              <p>size <span>*</span></p>
+              <span class="icon-case"><i class="fa fa-envelope-o"></i></span>
+              <input
+                type="number"
+                name="size"
+                id="size"
+                [(ngModel)]="house.size"
+              />
+              <div class="validation"></div>
+            </div>
+
+            <div class="form-group">
+              <p>address <span>*</span></p>
+              <span class="icon-case"><i class="fa fa-comments-o"></i></span>
+              <textarea
+                name="address"
+                rows="14"
+                [(ngModel)]="house.address"
+              ></textarea>
+              <div class="validation"></div>
+            </div>
+          </div>
+        </div>
+        <button type="submit" class="bouton-contact">Submit</button>
+      </form>
+    </div>
+  </body>
+</html>
