--- a/real-state/src/app/navbar/navbar.component.html
+++ b/real-state/src/app/navbar/navbar.component.html
@@ -1,1 +1,17 @@
-<p>navbar works!</p>
+<div class="nav">
+  <input type="checkbox" id="nav-check" />
+  <div class="nav-header">
+    <div class="nav-title"  [routerLink]="['/home']">RealState</div>
+  </div>
+  <div class="nav-btn">
+    <label for="nav-check">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+  </div>
+
+  <div class="nav-links">
+    <a href="#" target=>Logout</a>
+  </div>
+</div>
