realstate: edit 404 page template

--- a/real-state/src/app/not-found/not-found.component.html
+++ b/real-state/src/app/not-found/not-found.component.html
@@ -6,8 +6,6 @@
     * Send us an e-mail about this error and try later.
   </p>
   <nav class="nav">
-    <a href="#" class="link">index</a>&nbsp;|&nbsp;<a href="#" class="link"
-      >webmaster</a
-    >
+    <a [routerLink]="['/home']" class="link">Home</a>
   </nav>
 </main>
