--- a/real-state/src/app/houses/house/house.component.html
+++ b/real-state/src/app/houses/house/house.component.html
@@ -20,5 +20,6 @@
     <button class="reset-btn" [routerLink]="['/houses', 'edit', house.id]">
       update
     </button>
+    <button class="reset-btn red" (click)="onDelete()">delete</button>
   </div>
 </div>
