--- a/real-state/src/app/houses/new-house/new-house.component.css
+++ b/real-state/src/app/houses/new-house/new-house.component.css
@@ -63,6 +63,18 @@ input {
   float: left;
   padding: 0px 15px;
 }
+.alert {
+  border-radius: 5px 5px 5px 5px;
+  border: 1px solid rgb(251, 189, 189);
+  margin-bottom: 15px;
+  width: 95%;
+  height: 40px;
+  float: left;
+  padding-top: 2px;
+  padding-right: 2px;
+  padding-bottom: 2px;
+  padding-left: 2px;
+}
 .combo {
   border-radius: 0px 5px 5px 0px;
   border: 1px solid #eee;
