realstate: add editor(username) field in houseStructure

--- a/real-state/src/app/houses/new-house/new-house.component.html
+++ b/real-state/src/app/houses/new-house/new-house.component.html
@@ -85,7 +85,7 @@
           <div class="form-group">
             <p>type <span>*</span></p>
             <span class="icon-case"><i class="fa fa-phone"></i></span>
-            <select class="combo" name="username" id="username" ngModel>
+            <select class="combo" name="editor" id="editor" ngModel>
               <option
                 *ngFor="let account of accounts"
                 value="{{ account.username }}"
