--- a/real-state/src/app/houses/edit-house/edit-house.component.html
+++ b/real-state/src/app/houses/edit-house/edit-house.component.html
@@ -101,6 +101,25 @@
               ></textarea>
               <div class="validation"></div>
             </div>
+
+            <div class="form-group">
+              <p>Edtior <span>*</span></p>
+              <span class="icon-case"><i class="fa fa-phone"></i></span>
+              <select
+                class="combo"
+                name="editor"
+                id="editor"
+                [(ngModel)]="house.editor"
+              >
+                <option
+                  *ngFor="let account of accounts"
+                  value="{{ account.username }}"
+                >
+                  {{ account.username }}
+                </option>
+              </select>
+              <div class="validation"></div>
+            </div>
           </div>
         </div>
         <button type="submit" class="bouton-contact">Submit</button>
