realstate: update new-house component template

--- a/real-state/src/app/houses/new-house/new-house.component.html
+++ b/real-state/src/app/houses/new-house/new-house.component.html
@@ -83,7 +83,7 @@
           </div>
 
           <div class="form-group">
-            <p>type <span>*</span></p>
+            <p>Creator <span>*</span></p>
             <span class="icon-case"><i class="fa fa-phone"></i></span>
             <select class="combo" name="editor" id="editor" ngModel>
               <option
