realstate: update template after add registration number

--- a/real-state/src/app/houses/edit-house/edit-house.component.html
+++ b/real-state/src/app/houses/edit-house/edit-house.component.html
@@ -9,7 +9,12 @@
             <div class="form-group">
               <p>Registration Number <span>*</span></p>
               <span class="icon-case"><i class="fa fa-male"></i></span>
-              <input type="number" name="id" id="id" [(ngModel)]="house.id" />
+              <input
+                type="number"
+                name="registrationNumber"
+                id="registrationNumber"
+                [(ngModel)]="house.registrationNumber"
+              />
               <div class="validation"></div>
             </div>
 
