--- a/real-state/src/app/houses/house/house.component.html
+++ b/real-state/src/app/houses/house/house.component.html
@@ -6,7 +6,7 @@
   </div>
   <div *ngIf="house !== undefined">
     <div class="description">
-      <h2>Registration Number {{ house.id }}</h2>
+      <h2>Registration Number {{ house.registrationNumber }}</h2>
       <ul>
         <li>style: {{ house.style }}</li>
         <li>size: {{ house.size }}</li>
