--- a/real-state/src/app/houses/new-house/new-house.component.html
+++ b/real-state/src/app/houses/new-house/new-house.component.html
@@ -10,8 +10,8 @@
             <span class="icon-case"><i class="fa fa-male"></i></span>
             <input
               type="number"
-              name="id"
-              id="id"
+              name="registrationNumber"
+              id="registrationNumber"
               required
               minlength="3"
               maxlength="5"
