--- a/real-state/src/app/houses/houses.component.html
+++ b/real-state/src/app/houses/houses.component.html
@@ -9,7 +9,7 @@
       [routerLink]="['/houses', house.id]"
     >
       <div class="box">
-        <h3>{{ house.id }}</h3>
+        <h3>{{ house.registrationNumber }}</h3>
         <ul class="df">
           <li>style: {{ house.style }}</li>
           <li>size: {{ house.size }}</li>
