--- a/real-state/src/app/houses/new-house/new-house.component.html
+++ b/real-state/src/app/houses/new-house/new-house.component.html
@@ -8,13 +8,17 @@
           <div class="form-group">
             <p>Registration Number <span>*</span></p>
             <span class="icon-case"><i class="fa fa-male"></i></span>
+
+            <!-- change type to text-->
+
             <input
-              type="number"
+              type="text"
               name="registrationNumber"
               id="registrationNumber"
               required
-              minlength="3"
+              minlength="5"
               maxlength="5"
+              pattern="[1-9][0-9]*"
               #ID="ngModel"
               ngModel
               (change)="onChange(ID)"
@@ -26,6 +30,7 @@
               <div *ngIf="ID.errors!.minlength">
                 Registration number must be 5
               </div>
+              <div *ngIf="ID.errors?.pattern">pattern does not match</div>
             </div>
           </div>
 
@@ -97,7 +102,9 @@
           </div>
         </div>
       </div>
-      <button type="submit" class="bouton-contact">Submit</button>
+      <button [disabled]="f.invalid" type="submit" class="bouton-contact">
+        Submit
+      </button>
     </form>
   </body>
 </html>
