--- a/real-state/src/app/not-found/not-found.component.css
+++ b/real-state/src/app/not-found/not-found.component.css
@@ -1,72 +1,48 @@
-@import "https://fonts.googleapis.com/css?family=VT323";
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-a {
-  color: #e0e2f4;
-}
-
-body,
-p {
-  font: normal 20px/1.25rem "VT323", monospace;
-}
-
-h1 {
-  font: normal 2.75rem/1.05em "VT323", monospace;
-}
-
-h2 {
-  font: normal 2.25rem/1.25em "VT323", monospace;
-}
-
-h3 {
-  font: lighter 1.5rem/1.25em "VT323", monospace;
-}
-
-h4 {
-  font: lighter 1.125rem/1.2222222em "VT323", monospace;
-}
-
+@import url("https://fonts.googleapis.com/css?family=Press+Start+2P");
+html,
 body {
-  background: #0414a7;
-}
-.blue {
-  background-color: #0414a7;
-}
-
-.container {
-  width: 90%;
-  margin: auto;
-  max-width: 640px;
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
-.bsod {
-  padding-top: 10%;
+* {
+  font-family: "Press Start 2P", cursive;
+  box-sizing: border-box;
 }
-.bsod .neg {
-  text-align: center;
-  color: #0414a7;
+
+#app {
+  padding: 1rem;
+  background: black;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  color: #54fe55;
+  text-shadow: 0px 0px 10px;
+  font-size: 6rem;
+  flex-direction: column;
 }
-.bsod .neg .bg {
-  background: #aaaaaa;
-  padding: 0 15px 2px 13px;
+#app .txt {
+  font-size: 1.8rem;
 }
-.bsod .title {
-  margin-bottom: 50px;
+
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  49% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-.bsod .nav {
-  margin-top: 35px;
-  text-align: center;
-}
-.bsod .nav .link {
-  text-decoration: none;
-  padding: 0 9px 2px 8px;
-}
-.bsod .nav .link:hover,
-.bsod .nav .link:focus {
-  background: #aaaaaa;
-  color: #0414a7;
+.blink {
+  animation-name: blink;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
 }
