--- a/real-state/src/app/not-found/not-found.component.html
+++ b/real-state/src/app/not-found/not-found.component.html
@@ -1,11 +1,5 @@
-<main class="bsod container blue">
-  <h1 class="neg title"><span class="bg">Error - 404</span></h1>
-  <p>An error has occured, to continue:</p>
-  <p>
-    * Return to our homepage.<br />
-    * Send us an e-mail about this error and try later.
-  </p>
-  <nav class="nav">
-    <a [routerLink]="['/home']" class="link">Home</a>
-  </nav>
-</main>
+<div id="app">
+  <div>404 error</div>
+
+  <div class="txt">An error has occured<span class="blink">_</span></div>
+</div>
