--- a/real-state/src/app/houses/new-house/new-house.component.html
+++ b/real-state/src/app/houses/new-house/new-house.component.html
@@ -9,7 +9,7 @@
             <p>Registration Number <span>*</span></p>
             <span class="icon-case"><i class="fa fa-male"></i></span>
 
-            <!-- change type to text-->
+            <!-- change type to number-->
 
             <input
               type="text"
@@ -18,16 +18,15 @@
               required
               minlength="5"
               maxlength="5"
-              pattern="[1-9][0-9]*"
+              pattern="^[1-9][0-9]*$"
               #ID="ngModel"
               ngModel
-              (change)="onChange(ID)"
             />
             <div class="alert" *ngIf="ID.invalid && (ID.dirty || ID.touched)">
               <div *ngIf="ID.errors?.required">
                 Registration number is required!
               </div>
-              <div *ngIf="ID.errors!.minlength">
+              <div *ngIf="ID.errors?.minlength">
                 Registration number must be 5
               </div>
               <div *ngIf="ID.errors?.pattern">pattern does not match</div>
@@ -37,32 +36,29 @@
           <div class="form-group">
             <p>style <span>*</span></p>
             <span class="icon-case"><i class="fa fa-user"></i></span>
-            <select class="combo" name="style" id="style" ngModel>
+            <select class="combo" name="style" id="style" required ngModel>
               <option value="apartment">Apartment</option>
               <option value="house">House</option>
             </select>
-            <div class="validation"></div>
           </div>
 
           <div class="form-group">
             <p>type <span>*</span></p>
             <span class="icon-case"><i class="fa fa-phone"></i></span>
-            <select class="combo" name="type" id="type" ngModel>
+            <select class="combo" name="type" id="type" required ngModel>
               <option value="residential">Residential</option>
               <option value="commercial">Commercial</option>
               <option value="office">Office</option>
             </select>
-            <div class="validation"></div>
           </div>
 
           <div class="form-group">
             <p>status <span>*</span></p>
             <span class="icon-case"><i class="fa fa-phone"></i></span>
-            <select class="combo" name="status" id="status" ngModel>
+            <select class="combo" name="status" id="status" required ngModel>
               <option value="sale">Sale</option>
               <option value="rent">Rent</option>
             </select>
-            <div class="validation"></div>
           </div>
         </div>
 
@@ -70,27 +66,74 @@
           <div class="form-group">
             <p>Year Built <span>*</span></p>
             <span class="icon-case"><i class="fa fa-building-o"></i></span>
-            <input type="number" name="yearBuilt" id="yearBuilt" ngModel />
-            <div class="validation"></div>
+            <input
+              type="text"
+              name="yearBuilt"
+              id="yearBuilt"
+              required
+              ngModel
+              pattern="^([1][9][9][8,9])|([2][0]([0,1][0-9]|[2][0-2]))$"
+              #year="ngModel"
+            />
+            <div
+              class="alert"
+              *ngIf="year.invalid && (year.dirty || year.touched)"
+            >
+              <div *ngIf="year.errors?.required">bulited year is required!</div>
+              <div *ngIf="year.errors?.pattern">between (1998-2022)</div>
+            </div>
           </div>
+
           <div class="form-group">
             <p>size <span>*</span></p>
             <span class="icon-case"><i class="fa fa-envelope-o"></i></span>
-            <input type="number" name="size" id="size" ngModel />
-            <div class="validation"></div>
+            <input
+              type="text"
+              name="size"
+              id="size"
+              required
+              pattern="^(([1-5][0-9][0-9])|([5-9][0-9]))$"
+              #size="ngModel"
+              ngModel
+            />
+            <div
+              class="alert"
+              *ngIf="size.invalid && (size.dirty || size.touched)"
+            >
+              <div *ngIf="size.errors?.required">size is required!</div>
+              <div *ngIf="size.errors?.pattern">between(50-599)</div>
+            </div>
           </div>
 
           <div class="form-group">
             <p>address <span>*</span></p>
             <span class="icon-case"><i class="fa fa-comments-o"></i></span>
-            <textarea name="address" rows="14" ngModel></textarea>
-            <div class="validation"></div>
+            <textarea
+              name="address"
+              rows="14"
+              required
+              #address="ngModel"
+              ngModel
+            ></textarea>
+            <div
+              class="alert"
+              *ngIf="address.invalid && (address.dirty || address.touched)"
+            >
+              Address is required!
+            </div>
           </div>
 
           <div class="form-group">
             <p>Creator <span>*</span></p>
             <span class="icon-case"><i class="fa fa-phone"></i></span>
-            <select class="combo" name="editor" id="editor" ngModel>
+            <select
+              class="combo"
+              name="editor"
+              id="editor"
+              required
+              #creator="ngModel"
+              ngModel
+            >
               <option
                 *ngFor="let account of accounts"
                 value="{{ account.username }}"
@@ -98,7 +141,12 @@
                 {{ account.username }}
               </option>
             </select>
-            <div class="validation"></div>
+            <div
+              class="alert"
+              *ngIf="creator.invalid && (creator.dirty || creator.touched)"
+            >
+              creator is required!
+            </div>
           </div>
         </div>
       </div>
