--- a/real-state/src/app/file-upload/file-upload.component.html
+++ b/real-state/src/app/file-upload/file-upload.component.html
@@ -1,1 +1,29 @@
-<p>file-upload works!</p>
+<form>
+  <div class="form-group">
+    <fieldset class="form-group">
+      <label>Upload Logo</label>
+      {{ imageError }}
+      <div class="custom-file fileInputProfileWrap">
+        <input
+          type="file"
+          (change)="fileChangeEvent($event)"
+          class="fileInputProfile"
+        />
+        <div class="img-space">
+          <ng-container *ngIf="isImageSaved; else elseTemplate">
+            <img [src]="cardImageBase64" />
+          </ng-container>
+          <ng-template #elseTemplate>
+            <img
+              src="./../../assets/img/download (1).png"
+              class="img-responsive"
+            />
+          </ng-template>
+        </div>
+      </div>
+    </fieldset>
+  </div>
+  <a class="btn btn-danger" (click)="removeImage()" *ngIf="isImageSaved"
+    >Remove</a
+  >
+</form>
