realstate: add aggrid but not work

--- a/real-state/src/app/houses/houses.component.html
+++ b/real-state/src/app/houses/houses.component.html
@@ -18,4 +18,12 @@
       </div>
     </li>
   </ul>
+
+  <ag-grid-angular
+    style="width: 500px; height: 500px"
+    class="ag-theme-alpine"
+    [rowData]="rowData"
+    [columnDefs]="columnDefs"
+  >
+  </ag-grid-angular>
 </div>
