--- a/real-state/src/app/houses/houses.component.html
+++ b/real-state/src/app/houses/houses.component.html
@@ -1,3 +1,14 @@
+<head>
+  <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.noStyle.js"></script>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/ag-grid-community/dist/styles/ag-grid.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/ag-grid-community/dist/styles/ag-theme-alpine.css"
+  />
+</head>
 <div class="X">
   <h1>Houses</h1>
   <button class="reset-btn" [routerLink]="['/houses', 'new']">New</button>
