--- a/real-state/src/app/houses/new-house/new-house.component.html
+++ b/real-state/src/app/houses/new-house/new-house.component.html
@@ -148,6 +148,19 @@
               creator is required!
             </div>
           </div>
+
+          <div class="form-group">
+            <p>Image <span>*</span></p>
+
+            <input
+              type="file"
+              name="photo"
+              id="photo"
+              required
+              (change)="fileChangeEvent($event)"
+              ngModel
+            />
+          </div>
         </div>
       </div>
       <button [disabled]="f.invalid" type="submit" class="bouton-contact">
