realstate: add saving house datat in indexedDB

--- a/real-state/src/app/houses/houses.component.html
+++ b/real-state/src/app/houses/houses.component.html
@@ -29,12 +29,12 @@
       </div>
     </li>
   </ul>
-
+  <!--
   <ag-grid-angular
     style="width: 800px; height: 500px"
     class="ag-theme-alpine"
     [rowData]="rowData"
     [columnDefs]="columnDefs"
   >
-  </ag-grid-angular>
+  </ag-grid-angular>-->
 </div>
